--- a/src/main/resources/templates/generator.html
+++ b/src/main/resources/templates/generator.html
@@ -96,12 +96,13 @@
       <!-- Description Box -->
       <div class="card mt-3">
         <div class="card-body">
-            <h5 class="card-title">Workout Generator Description</h5>
-            <p class="card-text">This is a workout generator that generates YouTube videos to cater to your
-                requirements.</p>
+            <h5 class="card-title">How it works</h5>
+            <p class="card-text">Get your curated workout video by selecting where you're at, how long you want
+               to work out for and your targeted muscle group for a more effective session!</p>
             <p class="card-text">Select the location for either home or gym workout, the duration for a short
                 workout (4-20 mins) or a long workout (more than 20 minutes), and the focus to target the muscle
-                that you want to focus on.</p>
+                that you want to focus on.</p> Once you have selected your preferences, click on the generate button and our friendly gymbros from behind the scene will "pull" out your workout videos!
+                
         </div>
     </div>
     <br>
