--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -74,7 +74,7 @@
         <br>
         <h1>Welcome to Trainify</h1>
         <br>
-        <h3 class="bold">one-stop workout station to amplify your experience</h3>
+        <h3 class="bold">Turbocharge Your Workout at the Ultimate Fitness Hub!</h3>
         <br>
 
         <!-- Buttons for Login and Workout -->
@@ -88,7 +88,7 @@
         </div>
     </div>
         <div class="text-center mt-4">
-            <a class="btn btn-success" href="/RestAPI">REST API for Dev</a>
+            <a class="btn btn-success" href="/RestAPI">REST API</a>
         </div>
 
     <!-- Bootstrap JS and dependencies -->
