--- a/src/main/resources/templates/generator.html
+++ b/src/main/resources/templates/generator.html
@@ -41,7 +41,7 @@
     </div>
   </div>
 </nav>
-<br /><br /><br /><br><br><br><br><br><br><br><br>
+<br /><br /><br /><br><br>
 <div class="container">
   <div class="row col-md-8 offset-md-2">
     <div class="card translucent-card">
@@ -83,6 +83,7 @@
                     <option value="chest">Chest</option>
                     <option value="abs">Abdominal</option>
                     <option value="legs">Legs</option>
+                    <option value="fullbody">Full Body</option>
                 </select>
                 <!-- <div class="alert alert-danger" th:if="${#fields.hasErrors('focus')}" th:errors="*{focus}"> -->
 
@@ -99,9 +100,7 @@
             <h5 class="card-title">How it works</h5>
             <p class="card-text">Get your curated workout video by selecting where you're at, how long you want
                to work out for and your targeted muscle group for a more effective session!</p>
-            <p class="card-text">Select the location for either home or gym workout, the duration for a short
-                workout (4-20 mins) or a long workout (more than 20 minutes), and the focus to target the muscle
-                that you want to focus on.</p> Once you have selected your preferences, click on the generate button and our friendly gymbros from behind the scene will "pull" out your workout videos!
+            <p class="card-text">Once you have selected your preferences, click on the generate button to get to your workout videos!</p> 
                 
         </div>
     </div>
