--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -62,6 +62,14 @@
             align-items: center;
             height: 100vh;
         }
+        .custom-error-message {
+            background-color: #ffdddd;
+            color: #8b0000;
+            border: 1px solid #8b0000;
+            padding: 5px;
+            border-radius: 2px;
+            margin-top: 5px;
+        }
     </style>
 </head>
 
@@ -100,17 +108,18 @@
                     <div class="tab-content">
                         <!-- Login Tab -->
                         <div class="tab-pane fade show active" id="login">
-                            <form th:action="@{/user/login}" method="post" role="form" enctype="application/x-www-form-urlencoded">
+                            <form th:action="@{/user/login}" th:object="${user}" method="post" role="form" enctype="application/x-www-form-urlencoded">
                                 <div class="mb-3">
                                     <label class="form-label">Username:</label>
-                                    <input type="text" class="form-control" name="username" required>
-                                    <div classs="error"></div>
+                                    <input type="text" th:field="*{username}" class="form-control" name="username" placeholder="username.." required>
+                                    <br>
+                                    <div class="alert alert-danger" th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></div>
                                 </div>
-
                                 <div class="mb-3">
                                     <label class="form-label">Password:</label>
-                                    <input type="password" class="form-control" name="password" required>
-                                    <div classs="error"></div>
+                                    <input type="password" th:field="*{password}" class="form-control" name="password" placeholder="password.." required>
+                                    <br>
+                                    <div class="alert alert-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></div>
                                 </div>
 
                                 <div class="mb-3">
