--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -60,16 +60,19 @@
                     <h2 class="text-center">Register</h2>
                 </div>
                 <div class="card-body">
-                    <form th:action="@{/user/register}" method="post" role="form" enctype="application/x-www-form-urlencoded">
+                    <form th:action="@{/user/register}" th:object="${user}" method="post" role="form">
                         <div class="mb-3">
                             <label class="form-label">Username:</label>
-                            <input type="text" class="form-control" name="newUsername" required>
+                            <input type="text" th:field="*{username}" class="form-control" name="username" required>
                         </div>
+                        <div class="alert alert-danger" th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></div>
 
                         <div class="mb-3">
                             <label class="form-label">Password:</label>
-                            <input type="password" class="form-control" name="newPassword" required>
+                            <input type="password" th:field="*{password}" class="form-control" name="password" required>
                         </div>
+                        <div class="alert alert-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></div>
+
 
                         <div class="mb-3">
                             <button class="btn btn-primary" type="submit">Register</button>
