--- a/src/main/resources/templates/generator.html
+++ b/src/main/resources/templates/generator.html
@@ -49,43 +49,44 @@
           <h2 class="text-center">Workout Generator</h2>
       </div>
       <div class="card-body">
-          <form action="/generate-workout" 
+          <form th:action="@{/generate-workout}" 
+            th:object="${video}"
             method="post"
             role="form"
           >
             <div class="form-group mb-3">
               <label class="form-label">Location:</label>
-                <select name="Location" id="Location" >
-                    <option selected disabled>Select Location</option>
+                <select name="Location" th:field="*{location}" >
+                    <option value="null" selected disabled>Select Location</option>
                     <option value="home">Home</option>
                     <option value="gym">Gym</option>
                 </select>   
             </div>
-            <!-- <div class="error" th:if="${#fields.hasErrors('location')}" th:errors="*{location}"></div> -->
+            <div class="error" th:if="${#fields.hasErrors('location')}" th:errors="*{location}"></div>
 
 
             <div class="form-group mb-3">
                 <label class="form-label">Duration:</label>
-                <select name="Duration" id="Duration" >
-                    <option selected disabled>Select Duration</option>  
+                <select name="Duration" th:field="*{duration}">
+                    <option value="null" selected disabled>Select Duration</option>  
                     <option value="medium">Short</option>
                     <option value="long">Long</option>
                 </select>
             </div>
-            <!-- <div class="error" th:if="${#fields.hasErrors('duration')}" th:errors="*{duration}"></div> -->
+            <div class="error" th:if="${#fields.hasErrors('duration')}" th:errors="*{duration}"></div>
 
 
             <div class="form-group mb-3">
                 <label class="form-label">Focus:</label>
-                <select name="Focus" id="Focus">
-                    <option selected disabled>Select Focus</option>
+                <select name="Focus" th:field="*{focus}">
+                    <option value="null" selected disabled>Select Focus</option>
                     <option value="shoulder">Shoulder</option>
                     <option value="chest">Chest</option>
                     <option value="abs">Abdominal</option>
                     <option value="legs">Legs</option>
                     <option value="fullbody">Full Body</option>
                 </select>
-                <!-- <div class="alert alert-danger" th:if="${#fields.hasErrors('focus')}" th:errors="*{focus}"> -->
+                <div class="alert alert-danger" th:if="${#fields.hasErrors('focus')}" th:errors="*{focus}">
 
             </div> 
 
