api link change

--- a/src/main/resources/templates/api.html
+++ b/src/main/resources/templates/api.html
@@ -89,19 +89,19 @@
                             username of the user you want to access.
                         </p>
                         <div class="link-container">
-                            https://trainify.up.railway.app/api/user/{username}
+                            https://trainify-production.up.railway.app/api/user/{username}
                         </div>
                         <br>
                         <p class="text-center">To access sample user's IPPT data, click the link shown below.</p>
                         <div class="link-container">
-                            <a href="https://trainify.up.railway.app/api/user/test" class="darkblue-btn"
-                                target="_blank">https://trainify.up.railway.app/api/user/test</a>
+                            <a href="https://trainify-production.up.railway.app/api/user/test" class="darkblue-btn"
+                                target="_blank">https://trainify-production.up.railway.app/api/user/test</a>
                         </div>
                         <br>
                         <p class="text-center">To access all user's IPPT data, click the link shown below.</p>
                         <div class="link-container">
-                            <a href="https://trainify.up.railway.app/api/alluser/" class="darkblue-btn"
-                                target="_blank">https://trainify.up.railway.app/api/Trainify/</a>
+                            <a href="https://trainify-production.up.railway.app/api/alluser/" class="darkblue-btn"
+                                target="_blank">https://trainify-production.up.railway.app/api/alluser</a>
                         </div>
                         <br>
                     </div>
