minor api link change

--- a/src/main/resources/templates/api.html
+++ b/src/main/resources/templates/api.html
@@ -100,7 +100,7 @@
                         <br>
                         <p class="text-center">To access all user's IPPT data, click the link shown below.</p>
                         <div class="link-container">
-                            <a href="https://trainify-production.up.railway.app/api/alluser/" class="darkblue-btn"
+                            <a href="https://trainify-production.up.railway.app/api/alluser" class="darkblue-btn"
                                 target="_blank">https://trainify-production.up.railway.app/api/alluser</a>
                         </div>
                         <br>
